# learnopencv

VideoStabilization/: .gitignore  CMakeLists.txt  README.md  requirements.txt  video_stabilization.cpp  video_stabilization.py
VideoStabilization/tests/: check_collision_guard.cmake  test_video_stabilization.py
opencv5-yolo26-football-cpp/: CMakeLists.txt  README.md  build_opencv5.sh  reproduce.sh
opencv5-yolo26-football-cpp/scripts/: export_variants.py  export_yolo26_onnx.py
opencv5-yolo26-football-cpp/src/: benchmark_engines.cpp  cli.hpp  detect_image.cpp  detect_pose.cpp  detect_seg.cpp  detect_teams.cpp  detect_video.cpp  yolo26_dnn.cpp  yolo26_dnn.hpp
